--- a/install.txt
+++ b/install.txt
@@ -21,5 +21,5 @@ echo -n "Downloading pm2.."
 curl -sL https://deb.nodesource.com/setup_12.x | sudo bash - &>/dev/null; sudo apt-get update &>/dev/null; sudo apt install nodejs -y &>/dev/null; sudo npm install -g pm2 &>/dev/null
 echo -e "\rDone download pm2"
 echo -n "Downloading Tshake Source.." 
-git clone https://github.com/Jeka-1/Testw.git &>/dev/null
+git clone https://github.com/rhimh/T.git &>/dev/null
 echo -e "\rDone Zero Source"
